# mobilityia-hackathon

./: .gitignore  ADO-Intelligence-Platform-AWS-Architecture.md  ITP-LATAM-WB-Workshop.docx  ITP-LATAM-WB-Workshop.md  README.md  amplify.yml  arquitectura-mvp.md  criterios-evaluacion-hackathon.md  diagrama_arch.drawio  diagrama_arquitectura.drawio  diagrama_arquitectura_mermaid.md  posibles_viajes.JSON
agentcore-agents/AdoMantenimiento/: main.py  pyproject.toml
agentcore-agents/AdoMantenimiento/agentcore/: agentcore.json
agentcore-agents/AdoMantenimiento/agentcore/.cli/: deployed-state.json
agentcore-agents/AdoMantenimiento/app/AdoMantenimiento/: main.py  pyproject.toml
agentcore-agents/AdoMantenimiento/model/: load.py
dashboard/: .env.example  deploy-amplify.sh  index.html  package-lock.json  package.json
data/: README.md  analyze_data.py  analyze_spn_viaje.py  clean_routes.py  extract_routes.py  find_trap_trips.py  generate_10_trips.py  generate_simulated_trip.py  generate_trap_data.py  mapa_10_viajes.html  mapa_ruta_ida.html  mapa_ruta_regreso.html  plot_10_trips_map.py  plot_routes_clean.py  plot_routes_separate.py  plot_simulated_trip.py  ruta_ida_2704712.json  ruta_regreso_2725965.json  trap_trips_dynamo.json  viaje_simulado_demo.json  viaje_simulado_visual.html  viajes_consolidados.json
datos_spn/: data.JSON  fault_data_catalog.JSON
docs/: DISASTER-RECOVERY-RUNBOOK.md  aws-resources.md  diagrama-arquitectura-stakeholders.md  frontend-consumo-simulacion.md  lambdas-plan.md  plan-agentes-bedrock.md  sagemaker-modelo-predictivo-plan.md  (+2 more)
(+79 files in other folders)
